welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: 'case' expected but '(' found.
		(a,b,c,true) if (a>=b && b>=c)	=> return true
                ^inOrderEqual:4: error: '}' expected but ';' found.
		(a,b,c,false) if (a>b && b>c)		=> return true
^inOrderEqual:4: error: ';' expected but 'if' found.
		(a,b,c,false) if (a>b && b>c)		=> return true
                              ^inOrderEqual:8: error: eof expected but '}' found.
 }
 ^