welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
	(a,b,c,equalOk) match {
		(a,b,c,true) if (a>=b && b>=c)	=> return true
		(a,b,c,false) if (a>b && b>c)		=> return true
		(_,_,_,_)						=> return false
	}
}